Capitalise composite action input names

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,8 +57,8 @@ jobs:
         id: determine_next_tag_from_pr
         uses: climatepolicyradar/get-next-tag-from-pr-body@main
         with:
-          body: "${{ env.PR_BODY }}"
-          number: "${{ env.PR_NUMBER }}"
+          PR_BODY: "${{ env.PR_BODY }}"
+          PR_NUMBER: "${{ env.PR_NUMBER }}"
 
       # - name: Echo next tag
       #   run: echo ${{ steps.determine_next_tag_from_pr.outputs.new_tag }}
