--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,14 +49,14 @@ jobs:
     env:
       PR_BODY: "${{ github.event.pull_request.body }}"
     steps:
-      - name: Determine new tag version
+      - name: Determine new tag version from PR body
         id: determine_next_tag_from_pr
         uses: climatepolicyradar/get-next-tag-from-pr-body@PDCT-851/fail-the-auto-tagging-build-during-a-pr-if-no-semver-boxes-ticked
         with:
           pr_body: "${{ env.PR_BODY }}"
           pr_number: "${{ github.event.pull_request.number }}"
 
-      - name: Echo next tag
+      - name: Next tag deduced
         run: echo ${{ steps.determine_next_tag_from_pr.outputs.new_tag }}
 
   build:
