--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,8 +56,11 @@ jobs:
           pr_body: "${{ env.PR_BODY }}"
           pr_number: "${{ github.event.pull_request.number }}"
 
-      - name: Next tag found
-        run: echo ${{ steps.determine_next_tag_from_pr.outputs.new_tag }}
+      - name: Next tag found?
+        run: |
+          if [[ -z "${{ steps.determine_next_tag_from_pr.outputs.new_tag }}" ]]; then
+            exit 1;
+          fi
 
   build:
     if: ${{ ! startsWith(github.ref, 'refs/tags') }}
