--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: CI/CD
 
 on:
   push:
-    tags: ["v*"]
+    tags: [v*]
     branches:
       - main
   pull_request:
@@ -49,9 +49,25 @@ jobs:
     env:
       PR_BODY: "${{ github.event.pull_request.body }}"
     steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+      - name: Dump job context
+        env:
+          JOB_CONTEXT: ${{ toJson(job) }}
+        run: echo "$JOB_CONTEXT"
+      - name: Dump steps context
+        env:
+          STEPS_CONTEXT: ${{ toJson(steps) }}
+        run: echo "$STEPS_CONTEXT"
+      - name: Dump runner context
+        env:
+          RUNNER_CONTEXT: ${{ toJson(runner) }}
+        run: echo "$RUNNER_CONTEXT"
+
       - name: Debug
         run: |
-          echo "${GITHUB_CONTEXT}"
           echo "${{ github.event.pull_request }}"
           echo "${PR_BODY}"
 
