--- a/.github/workflows/auto-tagging-failsafe.yml
+++ b/.github/workflows/auto-tagging-failsafe.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - name: Determine new tag version from PR body
         id: determine_next_tag_from_pr
-        uses: climatepolicyradar/get-next-tag-from-pr-body@main
+        uses: climatepolicyradar/get-next-tag-from-pr-body@v2
         with:
           pr_body: "${{ env.PR_BODY }}"
           pr_number: "${{ github.event.pull_request.number }}"
