--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
       checks: write
       # For repo checkout
       contents: read
-    uses: climatepolicyradar/reusable-workflows/.github/workflows/python-precommit-validator.yml@main
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/python-precommit-validator.yml@v1
 
   test:
     runs-on: ubuntu-latest
@@ -93,7 +93,7 @@ jobs:
       - code-quality
       - test
     if: ${{ startsWith(github.ref, 'refs/tags') }}
-    uses: climatepolicyradar/reusable-workflows/.github/workflows/semver.yml@main
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/semver.yml@v1
     secrets: inherit
     with:
       repo-name: navigator-admin-backend
@@ -103,7 +103,7 @@ jobs:
     needs: build
     permissions:
       contents: write
-    uses: climatepolicyradar/reusable-workflows/.github/workflows/tag.yml@main
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/tag.yml@v1
     with:
       repo-name: navigator-admin-backend
       semver-tag: main-${GITHUB_SHA::8}
@@ -117,6 +117,6 @@ jobs:
     if: ${{ needs.tag.outputs.new_tag != 'Skip' }}
     permissions:
       contents: write
-    uses: climatepolicyradar/reusable-workflows/.github/workflows/release.yml@main
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/release.yml@v1
     with:
       new_tag: ${{ needs.tag.outputs.new_tag }}
