Add semicolons & exit if file cannot be found

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,22 +34,28 @@ jobs:
             exit 1;
           fi
 
+      - uses: actions/checkout@v4
       - name: Check pyproject.toml package version matches
         run: |
+          if [ ! -f pyproject.toml ]; then
+            echo "pyproject.toml file not found";
+            exit 1;
+          fi
+
           package_version=$(grep -m 1 version pyproject.toml | tr -s ' ' | tr -d '"' | tr -d "'" | cut -d' ' -f3)
           new_tag="${{ steps.determine_next_tag_from_pr.outputs.new_tag }}"
           new_tag=${new_tag#v}
 
           if [[ -z "${package_version}" ]]; then
-            echo "Package version in pyproject.toml file missing"
+            echo "Package version in pyproject.toml file missing";
             exit 1;
           elif [[ -z "${new_tag}" ]]; then
-            echo "Could not determine next tag"
+            echo "Could not determine next tag";
             exit 1;
           elif [[ "${new_tag}" == 'Skip' ]]; then
             exit 0;
           elif [[ "${package_version}" != "${new_tag}" ]]; then
-            echo "Package version in pyproject.toml file outdated. Based on the auto-semvering option selected, package version should be '${new_tag}'"
+            echo "Package version in pyproject.toml file outdated. Based on the auto-semvering option selected, package version should be '${new_tag}'";
             exit 1;
           fi
 
