--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,59 +13,13 @@ permissions: read-all
 
 # https://github.com/marketplace/actions/docker-layer-caching
 jobs:
-  check-pyproject-version:
-    runs-on: ubuntu-latest
-    # User controlled input needs to be santitised beforehand e.g., by adding an
-    # intermediate env var to prevent the workflow being exposed to a critical
-    # command injection attack
-    env:
-      PR_BODY: "${{ github.event.pull_request.body }}"
-    steps:
-      - name: Determine new tag version from PR body
-        id: determine_next_tag_from_pr
-        uses: climatepolicyradar/get-next-tag-from-pr-body@v2
-        with:
-          pr_body: "${{ env.PR_BODY }}"
-          pr_number: "${{ github.event.pull_request.number }}"
-
-      - name: Next tag found?
-        run: |
-          if [[ -z "${{ steps.determine_next_tag_from_pr.outputs.new_tag }}" ]]; then
-            exit 1;
-          fi
-
-      - uses: actions/checkout@v4
-      - name: Check pyproject.toml package version matches
-        run: |
-          if [ ! -f pyproject.toml ]; then
-            echo "pyproject.toml file not found";
-            exit 1;
-          fi
-
-          package_version=$(grep -m 1 version pyproject.toml | tr -s ' ' | tr -d '"' | tr -d "'" | cut -d' ' -f3)
-          new_tag="${{ steps.determine_next_tag_from_pr.outputs.new_tag }}"
-          new_tag=${new_tag#v}
-
-          if [[ -z "${package_version}" ]]; then
-            echo "Package version in pyproject.toml file missing";
-            exit 1;
-          elif [[ -z "${new_tag}" ]]; then
-            echo "Could not determine next tag";
-            exit 1;
-          elif [[ "${new_tag}" == 'Skip' ]]; then
-            exit 0;
-          elif [[ "${package_version}" != "${new_tag}" ]]; then
-            echo "Package version in pyproject.toml file outdated. Based on the auto-semvering option selected, package version should be '${new_tag}'";
-            exit 1;
-          fi
-
   code-quality:
     permissions:
       # For trunk to post annotations
       checks: write
       # For repo checkout
       contents: read
-    uses: climatepolicyradar/reusable-workflows/.github/workflows/python-precommit-validator.yml@v1
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/python-precommit-validator.yml@main
 
   test:
     runs-on: ubuntu-latest
@@ -92,7 +46,6 @@ jobs:
     needs:
       - code-quality
       - test
-      - check-pyproject-version
     steps:
       - uses: actions/checkout@v4
 
