Run check-auto-tagging-will-work on all PR events

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ permissions: read-all
 # https://github.com/marketplace/actions/docker-layer-caching
 jobs:
   check-auto-tagging-will-work:
-    if: ${{ (github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action == 'edited')) && (! startsWith(github.ref, 'refs/tags') && ! startsWith(github.ref, 'refs/heads/main')) }}
+    if: ${{ (github.event_name == 'pull_request') && (! startsWith(github.ref, 'refs/tags') && ! startsWith(github.ref, 'refs/heads/main')) }}
     runs-on: ubuntu-latest
     # User controlled input needs to be santitised beforehand e.g., by adding an
     # intermediate env var to prevent the workflow being exposed to a critical
@@ -39,8 +39,6 @@ jobs:
           fi
 
   code-quality:
-    needs:
-      - check-auto-tagging-will-work
     permissions:
       # For trunk to post annotations
       checks: write
@@ -50,8 +48,6 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs:
-      - check-auto-tagging-will-work
     steps:
       - name: Install latest Docker Compose
         uses: ndeloof/install-compose-action@v0.0.1
