--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,6 +42,7 @@ jobs:
           fi
 
   code-quality:
+    if: github.event.action != 'edited'
     permissions:
       # For trunk to post annotations
       checks: write
@@ -50,6 +51,7 @@ jobs:
     uses: climatepolicyradar/reusable-workflows/.github/workflows/python-precommit-validator.yml@v2
 
   test:
+    if: github.event.action != 'edited'
     runs-on: ubuntu-latest
     steps:
       - name: Install latest Docker Compose
