--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -59,7 +59,7 @@ jobs:
         run: make test
 
   build:
-    if: ${{ ! startsWith(github.ref, 'refs/tags') }}
+    if: ${{ success() && ! startsWith(github.ref, 'refs/tags') }}
     runs-on: ubuntu-latest
     needs:
       - code-quality
