--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -59,7 +59,7 @@ jobs:
         run: make test
 
   build:
-    if: ${{ ! startsWith(github.ref, 'refs/tags') }}
+    if: ${{ success() && ! startsWith(github.ref, 'refs/tags') }}
     runs-on: ubuntu-latest
     needs:
       - code-quality
@@ -107,9 +107,6 @@ jobs:
           fi
 
   manual-semver:
-    needs:
-      - code-quality
-      - test
     if: ${{ startsWith(github.ref, 'refs/tags') }}
     uses: climatepolicyradar/reusable-workflows/.github/workflows/semver.yml@v3
     secrets: inherit
