--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -59,7 +59,10 @@ jobs:
         run: make test
 
   build:
-    if: ${{ success() && ! startsWith(github.ref, 'refs/tags') }}
+    if: |
+      always() &&
+      (needs.code-quality.result == 'success' && needs.test.result == 'success') &&
+      ! startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs:
       - code-quality
@@ -107,7 +110,13 @@ jobs:
           fi
 
   manual-semver:
-    if: ${{ startsWith(github.ref, 'refs/tags') }}
+    if: |
+      always() &&
+      (needs.code-quality.result == 'success' && needs.test.result == 'success') &&
+      startsWith(github.ref, 'refs/tags')
+    needs:
+      - code-quality
+      - test
     uses: climatepolicyradar/reusable-workflows/.github/workflows/semver.yml@v3
     secrets: inherit
     with:
