--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,7 +23,7 @@ jobs:
 
   code-quality:
     if: |
-      always() &&
+      ! cancelled() && always() &&
       (needs.check-auto-tagging-will-work.result == 'skipped' || needs.check-auto-tagging-will-work.result == 'success') &&
       ! startsWith(github.ref, 'refs/tags')
     needs:
@@ -37,7 +37,7 @@ jobs:
 
   test:
     if: |
-      always() &&
+      ! cancelled() && always() &&
       (needs.check-auto-tagging-will-work.result == 'skipped' || needs.check-auto-tagging-will-work.result == 'success') &&
       ! startsWith(github.ref, 'refs/tags')
     needs:
@@ -62,7 +62,7 @@ jobs:
 
   build:
     if: |
-      always() &&
+      ! cancelled() && always() &&
       (needs.code-quality.result == 'success' && needs.test.result == 'success') &&
       ! startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
@@ -112,7 +112,7 @@ jobs:
           fi
 
   manual-semver:
-    if: ${{ always() && startsWith(github.ref, 'refs/tags') }}
+    if: ${{ ! cancelled() && always() && startsWith(github.ref, 'refs/tags') }}
     uses: climatepolicyradar/reusable-workflows/.github/workflows/semver.yml@v3
     secrets: inherit
     with:
@@ -120,7 +120,7 @@ jobs:
       semver-tag: main-${GITHUB_SHA::8}
 
   tag:
-    if: ${{ always() && (needs.build.result == 'success')}}
+    if: ${{ ! cancelled() && always() && (needs.build.result == 'success')}}
     needs: build
     permissions:
       contents: write
@@ -134,7 +134,7 @@ jobs:
       DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
 
   release:
-    if: ${{ always() && (needs.tag.result == 'success' && needs.tag.outputs.new_tag != 'Skip')}}
+    if: ${{ ! cancelled() && always() && (needs.tag.result == 'success' && needs.tag.outputs.new_tag != 'Skip')}}
     needs: tag
     permissions:
       contents: write
