--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -24,6 +24,10 @@ runtimes:
 # This is the section where you manage your linters.
 # (https://docs.trunk.io/check/configuration)
 lint:
+  disabled:
+    # Hadolint seems to have excessive memory use on Mac.
+    # Disable until we can investigate further.
+    - hadolint
   definitions:
     - name: bandit
       direct_configs: [bandit.yaml]
@@ -35,26 +39,33 @@ lint:
     - actionlint@1.6.27
     - bandit@1.7.8
     - black@24.3.0
-    - checkov@3.2.44
+    - checkov@3.2.55
     - git-diff-check
-    - hadolint@2.12.0
     - isort@5.13.2
     - markdownlint@0.39.0
     - osv-scanner@1.7.0
-    - pre-commit-hooks@4.5.0:
+    - pre-commit-hooks@4.6.0:
         commands:
-          - end-of-file-fixer
+          - check-ast
+          - check-case-conflict
+          - check-docstring-first
           - check-json
-          - detect-aws-credentials
+          - check-merge-conflict
+          - check-toml
+          - check-yaml
+          - debug-statements
+          - detect-aws-credentials --allow-missing-credentials
+          - end-of-file-fixer
+          - trailing-whitespace
     - prettier@3.2.5
-    - pyright@1.1.355
-    - ruff@0.3.4
+    - pyright@1.1.357
+    - ruff@0.3.5
     - shellcheck@0.10.0
     - shfmt@3.6.0
     - taplo@0.8.1
     - terrascan@1.19.1
-    - trivy@0.50.0
-    - trufflehog@3.70.3
+    - trivy@0.50.1
+    - trufflehog@3.71.0
     - yamllint@1.35.1
 
 actions:
