--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,6 +16,9 @@ permissions: read-all
 
 jobs:
   check-auto-tagging-will-work:
+    concurrency:
+      group: ${{ github.ref }}
+      cancel-in-progress: true
     if: |
       github.event_name == 'pull_request' &&
       (! startsWith(github.ref, 'refs/tags') && ! startsWith(github.ref, 'refs/heads/main'))
