--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ python-dotenv = "^0.19.2"
 pytest = "^7.0.1"
 pytest-dotenv = "^0.5.2"
 pytest-mock = "^3.7.0"
+pytest-cov = "^4.1.0"
 black = "^23.1.0"
 pyright = "1.1.294"
 pytest-asyncio = "^0.18.3"
