fix makefile and add retention of 30 days

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -68,6 +68,7 @@ jobs:
         with:
           name: code-coverage-report
           path: htmlcov
+          retention-days: 30
 
   build:
     if: |
