--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -64,7 +64,9 @@ jobs:
         run: make test
 
       - name: Debug
-        run: ls ./htmlcov
+        run: |
+          ls -l
+          pwd
 
       - name: Archive code coverage results
         uses: actions/upload-artifact@v4
