--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -28,12 +28,18 @@ lint:
     # Hadolint seems to have excessive memory use on Mac.
     # Disable until we can investigate further.
     - hadolint
+
   definitions:
     - name: bandit
       direct_configs: [bandit.yaml]
       commands:
         - name: lint
           run: bandit --exit-zero -c bandit.yaml --format json --output ${tmpfile} ${target}
+
+  ignore:
+    - linters: [osv-scanner]
+      paths:
+        - poetry.lock
 
   enabled:
     - actionlint@1.6.27
