--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ boto3 = "^1.28.46"
 moto = "^4.2.2"
 types-sqlalchemy = "^1.4.53.38"
 urllib3 = "^1.26.17"
-db-client = { git = "https://github.com/climatepolicyradar/navigator-db-client.git", tag = "v3.7.2" }
+db-client = { git = "https://github.com/climatepolicyradar/navigator-db-client.git", rev = "755b2169f10c7be88ceb4cd8e368d332fa44df83" }
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
