Add test db running in docker for integration tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pytest-mock = "^3.7.0"
 black = "^24.4.2"
 pyright = "1.1.374"
 pytest-asyncio = "^0.18.3"
+pytest-mock-resources = "^2.10.1"
 ruff = "^0.0.246"
 
 [build-system]
