Extract s3 bucket name to env variable

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ ADMIN_POSTGRES_HOST=admin_backend_db
 # API
 SECRET_KEY=secret_test_key
 API_HOST=http://navigator-admin-backend:8888
+
+# AWS
+INGEST_JSON_BUCKET=test_bucket
