--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,43 +38,43 @@ jobs:
       contents: read
     uses: climatepolicyradar/reusable-workflows/.github/workflows/python-precommit-validator.yml@v16
 
-  test:
-    if: |
-      ! cancelled() && always() &&
-      (needs.check-auto-tagging-will-work.result == 'skipped' || needs.check-auto-tagging-will-work.result == 'success') &&
-      ! startsWith(github.ref, 'refs/tags')
-    needs:
-      - check-auto-tagging-will-work
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install latest Docker Compose
-        uses: ndeloof/install-compose-action@v0.0.1
-        with:
-          legacy: false
+  # test:
+  #   if: |
+  #     ! cancelled() && always() &&
+  #     (needs.check-auto-tagging-will-work.result == 'skipped' || needs.check-auto-tagging-will-work.result == 'success') &&
+  #     ! startsWith(github.ref, 'refs/tags')
+  #   needs:
+  #     - check-auto-tagging-will-work
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Install latest Docker Compose
+  #       uses: ndeloof/install-compose-action@v0.0.1
+  #       with:
+  #         legacy: false
 
-      - uses: actions/checkout@v4
+  #     - uses: actions/checkout@v4
 
-      - name: Configure test env variables
-        run: cp .env.example .env
+  #     - name: Configure test env variables
+  #       run: cp .env.example .env
 
-      - name: Build docker compose
-        run: make build_dev
+  #     - name: Build docker compose
+  #       run: make build_dev
 
-      - name: Run Unit Tests
-        run: make unit_test
+  #     - name: Run Unit Tests
+  #       run: make unit_test
 
-      - name: Run Integration Tests
-        run: make integration_test
+  #     - name: Run Integration Tests
+  #       run: make integration_test
 
   build:
-    if: |
-      ! cancelled() && always() &&
-      (needs.code-quality.result == 'success' && needs.test.result == 'success') &&
-      ! startsWith(github.ref, 'refs/tags')
+    # if: |
+    #   ! cancelled() && always() &&
+    #   (needs.code-quality.result == 'success' && needs.test.result == 'success') &&
+    #   ! startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs:
       - code-quality
-      - test
+      # - test
     steps:
       - uses: actions/checkout@v4
 
