--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "admin_backend"
-version = "2.16.2"
+version = "2.17.1"
 description = ""
 authors = ["CPR-dev-team <tech@climatepolicyradar.org>"]
 packages = [{ include = "app" }, { include = "tests" }]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 fastapi = "^0.103.0"
 fastapi-health = "^0.4.0"
 fastapi-pagination = "^0.12.9"
@@ -30,9 +30,10 @@ moto = "^4.2.2"
 types-sqlalchemy = "^1.4.53.38"
 urllib3 = "^1.26.17"
 db-client = { git = "https://github.com/climatepolicyradar/navigator-db-client.git", tag = "v3.8.15" }
+navigator-notify = { git = "https://github.com/climatepolicyradar/navigator-notify.git", tag = "v0.0.2-beta" }
 
 [tool.poetry.dev-dependencies]
-pre-commit = "^2.17.0"
+pre-commit = "^3.8.0"
 python-dotenv = "^0.19.2"
 pytest = "^8.3.2"
 pytest-dotenv = "^0.5.2"
@@ -67,5 +68,5 @@ exclude = "^/alembic/versions/"
 [tool.pyright]
 include = ["app", "tests"]
 exclude = ["**/__pycache__"]
-pythonVersion = "3.9"
+pythonVersion = "3.10"
 venv = "admin-backend"
