--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ types-sqlalchemy = "^1.4.53.38"
 urllib3 = "^1.26.17"
 db-client = { git = "https://github.com/climatepolicyradar/navigator-db-client.git", tag = "v3.8.15" }
 navigator-notify = { git = "https://github.com/climatepolicyradar/navigator-notify.git", tag = "v0.0.2-beta" }
+bcrypt = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.8.0"
