Add notification service

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,11 @@ ADMIN_POSTGRES_HOST=admin_backend_db
 # API
 SECRET_KEY=secret_test_key
 API_HOST=http://navigator-admin-backend:8888
+
+# AWS
+INGEST_JSON_BUCKET=skip
+AWS_ACCESS_KEY_ID=test
+_AWS_SECRET_ACCESS_KEY=test
+
+# Slack Notifications
+SLACK_WEBHOOK_URL=skip
