--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ SECRET_KEY=secret_test_key
 API_HOST=http://navigator-admin-backend:8888
 
 # AWS
-INGEST_JSON_BUCKET=skip
+BULK_IMPORT_BUCKET=skip
 AWS_ACCESS_KEY_ID=test
 _AWS_SECRET_ACCESS_KEY=test
 
