Feature/pdct 1538 bulk import make async (#231)
* Add navigator-notify dependency and update python

* Fix upgrade to python 3.10 issues

* Add notification service

* Make integration tests use the aws s3 mock

* Rename

* Fix test and change bcrypt version

* Fix logging

* Save local bulk import results to a dir that is ignored by git

* Bump python in Dockerfile

* Remove print

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,9 @@ SECRET_KEY=secret_test_key
 API_HOST=http://navigator-admin-backend:8888
 
 # AWS
-INGEST_JSON_BUCKET=test_bucket
+BULK_IMPORT_BUCKET=skip
+AWS_ACCESS_KEY_ID=test
+_AWS_SECRET_ACCESS_KEY=test
+
+# Slack Notifications
+SLACK_WEBHOOK_URL=skip
