--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 POSTGRES_USER=navigator
 POSTGRES_PASSWORD=password
 ADMIN_POSTGRES_HOST=admin_backend_db
+PGUSER=navigator
+PGPASSWORD=password
+PGHOST=admin_backend_db
 
 # API
 SECRET_KEY=secret_test_key
