--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,5 +33,15 @@ services:
       admin_backend_db:
         condition: service_healthy
 
+  localstack:
+    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
+    image: localstack/localstack
+    ports:
+      - 127.0.0.1:4566:4566 # LocalStack Gateway
+      - 127.0.0.1:4510-4559:4510-4559 # external services port range
+    environment:
+      # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
+      - DEBUG=${DEBUG:-0}
+
 volumes:
   admin-data:
