--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,10 @@ SECRET_KEY=secret_test_key
 API_HOST=http://navigator-admin-backend:8888
 
 # AWS
-BULK_IMPORT_BUCKET=skip
+BULK_IMPORT_BUCKET=bulk-import-bucket
 AWS_ACCESS_KEY_ID=test
-_AWS_SECRET_ACCESS_KEY=test
+AWS_SECRET_ACCESS_KEY=test
+AWS_ENDPOINT_URL=http://localhost:4566
 
 # Slack Notifications
 SLACK_WEBHOOK_URL=skip
