--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,16 @@ services:
       timeout: 3s
       retries: 30
 
+  localstack:
+    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
+    image: localstack/localstack:s3-latest
+    ports:
+      - 127.0.0.1:4566:4566 # LocalStack Gateway
+    environment:
+      - DEBUG=${DEBUG:-0}
+    volumes:
+      - ./init-s3.py:/etc/localstack/init/ready.d/init-s3.py
+
   navigator-admin-backend:
     build:
       context: ./
@@ -31,16 +41,8 @@ services:
     depends_on:
       admin_backend_db:
         condition: service_healthy
-
-  localstack:
-    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
-    image: localstack/localstack:s3-latest
-    ports:
-      - 127.0.0.1:4566:4566 # LocalStack Gateway
-    environment:
-      - DEBUG=${DEBUG:-0}
-    volumes:
-      - ./init-s3.py:/etc/localstack/init/ready.d/init-s3.py
+      localstack:
+        condition: service_started
 
 volumes:
   admin-data:
