--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.7"
 services:
   admin_backend_db:
     image: postgres:14
@@ -7,10 +6,11 @@ services:
       - .env
     ports:
       - 5432:5432
+    hostname: admin_backend_db
     volumes:
       - admin-data:/var/lib/postgresql/data:cached
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: [CMD-SHELL, "pg_isready -U ${POSTGRES_USER}"]
       interval: 5s
       timeout: 3s
       retries: 30
@@ -32,6 +32,14 @@ services:
     depends_on:
       admin_backend_db:
         condition: service_healthy
-
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin4
+    restart: always
+    ports:
+      - 8000:80
+    environment:
+      PGADMIN_DEFAULT_EMAIL: dev@cpr.com
+      PGADMIN_DEFAULT_PASSWORD: cpr
 volumes:
-  admin-data:
+  admin-data: {}
