--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ POSTGRES_PASSWORD=password
 ADMIN_POSTGRES_HOST=admin_backend_db # for running tests outside docker this needs to be localhost
 PGUSER=navigator
 PGPASSWORD=password
-PGHOST=admin_backend_db
+PGHOST=admin_backend_db # for running tests outside docker this needs to be localhost
 
 # API
 SECRET_KEY=secret_test_key
