Feature/pdct 1570 add aws s3 docker image for integration tests (#254)
* Add localstack

* Create S3 bucket in localstack and use in integration tests

* Update .env.example

* Remove unnecessary stuff

* Fix unit tests

* Update docker-compose.yml

* WIP

* WIP

* Remove unnecessary logic

* Update patch version

* Fix unit tests

* Add cleanup fixture that deletes files saved to s3 during integration tests

* Update env example

* Move init-s3 to the tests directory

* Replace hard coded values with env variables and remove unnecessary code from s3 mock

* Rename

* Swallow exceptions if s3 cleanup has error

* Add error handling

* Point localstack to env file

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,20 @@
 # DB
 POSTGRES_USER=navigator
 POSTGRES_PASSWORD=password
-ADMIN_POSTGRES_HOST=admin_backend_db
+ADMIN_POSTGRES_HOST=admin_backend_db # for running tests outside docker this needs to be localhost
 PGUSER=navigator
 PGPASSWORD=password
-PGHOST=admin_backend_db
+PGHOST=admin_backend_db # for running tests outside docker this needs to be localhost
 
 # API
 SECRET_KEY=secret_test_key
 API_HOST=http://navigator-admin-backend:8888
 
 # AWS
-BULK_IMPORT_BUCKET=skip
+BULK_IMPORT_BUCKET=bulk-import-bucket
 AWS_ACCESS_KEY_ID=test
-_AWS_SECRET_ACCESS_KEY=test
+AWS_SECRET_ACCESS_KEY=test
+AWS_ENDPOINT_URL=http://localstack:4566 # for running tests outside docker this needs to be http://localhost:4566
 
 # Slack Notifications
 SLACK_WEBHOOK_URL=skip
