--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.7"
 services:
   admin_backend_db:
     image: postgres:14
@@ -10,10 +9,22 @@ services:
     volumes:
       - admin-data:/var/lib/postgresql/data:cached
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: [CMD-SHELL, "pg_isready -U ${POSTGRES_USER}"]
       interval: 5s
       timeout: 3s
       retries: 30
+
+  localstack:
+    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
+    image: localstack/localstack:s3-latest
+    env_file:
+      - .env
+    ports:
+      - 127.0.0.1:4566:4566 # LocalStack Gateway
+    environment:
+      - DEBUG=${DEBUG:-0}
+    volumes:
+      - ./tests/integration_tests/init-s3.py:/etc/localstack/init/ready.d/init-s3.py
 
   navigator-admin-backend:
     build:
@@ -32,6 +43,8 @@ services:
     depends_on:
       admin_backend_db:
         condition: service_healthy
+      localstack:
+        condition: service_started
 
 volumes:
   admin-data:
