fix: put depends on localstck back into docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ services:
     depends_on:
       admin_backend_db:
         condition: service_healthy
+      localstack:
+        condition: service_started
 
   pgadmin:
     image: dpage/pgadmin4
