--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ urllib3 = "^1.26.17"
 db-client = { git = "https://github.com/climatepolicyradar/navigator-db-client.git", rev = "v3.8.26" }
 navigator-notify = { git = "https://github.com/climatepolicyradar/navigator-notify.git", tag = "v0.0.2-beta" }
 bcrypt = "4.0.1"
+fastapi-cli = "^0.0.5"
+pytest-watch = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.8.0"
