--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,4 @@
-# DB
-POSTGRES_USER=navigator
-POSTGRES_PASSWORD=password
-ADMIN_POSTGRES_HOST=admin_backend_db # for running tests outside docker this needs to be localhost
-PGUSER=navigator
-PGPASSWORD=password
-PGHOST=admin_backend_db # for running tests outside docker this needs to be localhost
-
-# API
+# This value is used for encrypting passwords
+# You can get this from the AWS
+# If you're using `make dev` you will need to use the staging value
 SECRET_KEY=secret_test_key
-API_HOST=http://navigator-admin-backend:8888
-
-# AWS
-BULK_IMPORT_BUCKET=bulk-import-bucket
-AWS_ACCESS_KEY_ID=test
-AWS_SECRET_ACCESS_KEY=test
-AWS_ENDPOINT_URL=http://localstack:4566 # for running tests outside docker this needs to be http://localhost:4566
-
-# Slack Notifications
-SLACK_WEBHOOK_URL=skip
