--- a/Dockerfile.webapp
+++ b/Dockerfile.webapp
@@ -1,5 +1,11 @@
 FROM python:3.10-slim
 
+# We do not mind root users as this is a dev container
+# trunk-ignore(trivy/DS002)
+# trunk-ignore(checkov/CKV_DOCKER_8)
+USER root
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 CMD curl -f http://localhost:8888/api/v1 || exit 1
+
 WORKDIR /usr/src
 ENV PYTHONPATH=/usr/src
 
