--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,3 +1,4 @@
+name: navigator-admin-backend-test
 services:
   webapp:
     command: poetry run pytest --disable-warnings ${TEST}
@@ -8,6 +9,9 @@ services:
     volumes:
       - ./tests:/usr/src/tests
     environment:
+      # This is for when people explicitly set the tests they want to run
+      # It is used in the makefile
+      TEST: ${TEST}
       PYTHONPATH: .
       ADMIN_POSTGRES_HOST: postgres
       ADMIN_POSTGRES_USER: navigator_admin
@@ -19,12 +23,20 @@ services:
       PGDATABASE: navigator
       SECRET_KEY: ???
       # API_HOST: http://navigator-admin-backend:8888
-      # This is for when people explicitly set the tests they want to run
-      # It is used in the makefile
-      TEST: ${TEST}
+
+      # Bulk import
+      SLACK_WEBHOOK_URL: skip
+      BULK_IMPORT_BUCKET: bulk-import-bucket
+
+      # localstack
+      AWS_ACCESS_KEY_ID: test
+      AWS_SECRET_ACCESS_KEY: test
+      AWS_ENDPOINT_URL: http://localstack:4566
     depends_on:
       postgres:
         condition: service_healthy
+      localstack:
+        condition: service_started
 
   postgres:
     environment:
@@ -39,3 +51,18 @@ services:
       interval: 5s
       timeout: 3s
       retries: 30
+
+  localstack:
+    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
+    image: localstack/localstack:s3-latest
+    ports:
+      - 4566:4566 # LocalStack Gateway
+    environment:
+      DEBUG: ${DEBUG:-0}
+      # These values are used by the init-s3.py script
+      BULK_IMPORT_BUCKET: bulk-import-bucket
+      AWS_ACCESS_KEY_ID: test
+      AWS_SECRET_ACCESS_KEY: test
+      AWS_ENDPOINT_URL: http://localhost:4566
+    volumes:
+      - ./tests/integration_tests/init-s3.py:/etc/localstack/init/ready.d/init-s3.py
