--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+name: navigator-admin-backend
 services:
   admin_backend_db:
     image: postgres:14
@@ -47,4 +48,4 @@ services:
         condition: service_started
 
 volumes:
-  admin-data:
+  admin-data: {}
