--- a/Dockerfile.webapp
+++ b/Dockerfile.webapp
@@ -11,8 +11,7 @@ ENV PYTHONPATH=/usr/src
 
 RUN <<EOF
 apt-get update
-apt-get install -y --no-install-recommends
-postgresql-client
+apt-get install -y --no-install-recommends postgresql-client
 rm -rf /var/lib/apt/lists/*
 EOF
 
