--- a/Dockerfile.postgres
+++ b/Dockerfile.postgres
@@ -6,6 +6,7 @@ FROM postgres:14
 # trunk-ignore(checkov/CKV_DOCKER_8)
 USER root
 
+ENV POSTGRES_USER=navigator_admin
 HEALTHCHECK --interval=5s --timeout=30s --retries=30 CMD "pg_isready -U ${POSTGRES_USER}"
 
 WORKDIR /app
