--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,9 +56,17 @@ jobs:
 
       - name: Run Unit Tests
         run: make test TEST=tests/unit_tests/
+        env:
+          POSTGRES_USER: navigator_admin
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: navigator
 
       - name: Run Integration Tests
         run: make test TEST=tests/integration_tests
+        env:
+          POSTGRES_USER: navigator_admin
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: navigator
 
   build:
     if: |
