Add missing env variables to example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# DB
+POSTGRES_USER=navigator
+POSTGRES_PASSWORD=password
+
 # This value is used for encrypting passwords
 # You can get this from the AWS
 # If you're using `make dev` you will need to use the staging value
