Fix pytest test discovery config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
-addopts = "-p no:cacheprovider"
+addopts = "--import-mode=importlib"
 env_files = """
     .env.test
     .env
