Feature/app 47 read corpus type information via admin service (#274)
* Add corpus type read route permissions

* Add /all and /get routes for corpus types

* Add integration tests for /all corpus types

* Register corpus types router

* Add /get tests for corpus types router

* Fix return type

* Test fixes

* Bump to 2.17.25

* Rename files to avoid pytest discovery error

* Fix pytest test discovery config

* Make get optional return

* Use one or none

* Update authorisation.py

* Update authorisation.py

* Add corpus type unit tests

* Make error singular not plural

* Update __init__.py

* Update corpus_type_service.py

* Update conftest.py

* Fix tests

* Fix test

* Fix test

* Fix tests

* Add service unit tests

* Update test_get_corpus_type_service.py

* Fix tests

* Early return

* Final test fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "admin_backend"
-version = "2.17.24"
+version = "2.17.25"
 description = ""
 authors = ["CPR-dev-team <tech@climatepolicyradar.org>"]
 packages = [{ include = "app" }, { include = "tests" }]
@@ -51,7 +51,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
-addopts = "-p no:cacheprovider"
+addopts = "--import-mode=importlib"
 env_files = """
     .env.test
     .env
