--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,7 +1,7 @@
 name: navigator-admin-backend-test
 services:
   webapp:
-    command: poetry run pytest --disable-warnings ${TEST}
+    command: poetry run pytest --disable-warnings -vv ${TEST}
     build:
       context: ./
       dockerfile: Dockerfile.webapp
