Add value to SECRET_KEY env variable in the dev docker container

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -18,7 +18,7 @@ services:
       ADMIN_POSTGRES_USER: navigator_admin
       ADMIN_POSTGRES_DATABASE: navigator
       ADMIN_POSTGRES_PASSWORD: password
-      SECRET_KEY: ???
+      SECRET_KEY: secret_test_key
     depends_on:
       postgres:
         condition: service_healthy
