--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -24,11 +24,13 @@ services:
       # Bulk import
       SLACK_WEBHOOK_URL: skip
       BULK_IMPORT_BUCKET: bulk-import-bucket
+      # Db dump
+      DATABASE_DUMP_BUCKET: database-dump-bucket
 
       # localstack
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
-      AWS_ENDPOINT_URL: http://localstack:4566
+      AWS_ENDPOINT_URL: https://eu-west-1.console.aws.amazon.com/
     depends_on:
       postgres:
         condition: service_healthy
@@ -62,6 +64,7 @@ services:
       DEBUG: ${DEBUG:-0}
       # These values are used by the init-s3.py script
       BULK_IMPORT_BUCKET: bulk-import-bucket
+      DATABASE_DUMP_BUCKET: database-dump-bucket
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
       AWS_ENDPOINT_URL: http://localhost:4566
