Feature/app 282 data dumps of rds stores (#328)
* feat: create functions to dump db and upload db to s3

* chore: add todo re trunk error which was ignored on previous commit

* fix: set password on cmd command

When pg_dump is given a username and no password mechanism is provided,
PostgreSQL will prompt interactively for a password. In a Docker
container, this interactive prompt is invisible and causes the process
to hang indefinitely

* feat: add db dump bucket secret to docker compose

* docs: improve doc string

* fix: aws endpoint incorrectly changed

* fix: add creates3 bucket for local stack instance

* refactor: small security tweaks to get db dump script

* feat: clean up file after db dump uploaded

* test: aws client uploads sql file to bucket

* test: database dump process

* feat: validate postgres params

* chore: add extra verbosity to tests

* feat: add function to delete local file

* trigger db dump upload in bulk import

* test: remove function that checks if file is deleted in aws proces

* fix: make timeout an optional parameter

* fix: remove bare raise

* fix: hex block

remove some of the security metadata that was removed, realised these might be required in a full db dump restore

* docs: add more meaning command illustrating what the command does

* refactor: fix logging traceback inline with error logs

* fix: remove this try catch block, this is being handled further down the tree

* test: parametrize the validate params

* test: add test bucket to env example

* test: add another timeout function to test false positives

* test: add db dump mock to bulk import tests

* fix: safely retrieve key

* chore:gahdamnlockfileissues

* fix: push lock file changes

* chore: update project version

* chore: suppress bandit linting error

- The warning was raised because subprocess is often seen as a potential
  security risk, especially when dealing with untrusted inputs.

we are are already following best practices in several areas (e.g., using 

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,7 +1,7 @@
 name: navigator-admin-backend-test
 services:
   webapp:
-    command: poetry run pytest --disable-warnings -vv ${TEST}
+    command: poetry run pytest --disable-warnings -vvv ${TEST}
     build:
       context: ./
       dockerfile: Dockerfile.webapp
@@ -29,6 +29,9 @@ services:
       # Bulk import
       SLACK_WEBHOOK_URL: skip
       BULK_IMPORT_BUCKET: bulk-import-bucket
+
+      # Db dump
+      DATABASE_DUMP_BUCKET: database-dump-bucket
 
       # localstack
       AWS_ACCESS_KEY_ID: test
@@ -63,6 +66,7 @@ services:
       DEBUG: ${DEBUG:-0}
       # These values are used by the init-s3.py script
       BULK_IMPORT_BUCKET: bulk-import-bucket
+      DATABASE_DUMP_BUCKET: database-dump-bucket
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
       AWS_ENDPOINT_URL: http://localhost:4566
