Add cache bucket URL

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -28,6 +28,9 @@ services:
       # Db dump
       DATABASE_DUMP_BUCKET: database-dump-bucket
 
+      # Presigned URLs
+      CACHE_BUCKET: cache-bucket
+
       # localstack
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
@@ -66,6 +69,7 @@ services:
       # These values are used by the init-s3.py script
       BULK_IMPORT_BUCKET: bulk-import-bucket
       DATABASE_DUMP_BUCKET: database-dump-bucket
+      CACHE_BUCKET: cache-bucket
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
       AWS_ENDPOINT_URL: http://localhost:4566
