Spike: Upload corpus image to s3 (#338)
* Add corpus image upload function

* Fix typo

* Fix unit tests

* Update unit tests

* Update trunk.yaml

* Add cache bucket URL

* Use existing s3 code for upload

* Create test_corpus_logo.py

* Update corpus.py

* Update poetry.lock

* Update docker-compose-dev.yml

* Update pyproject.toml

* Update poetry.lock

* Update test_get_upload_details_document_service.py

* Fix test

* Update s3bucket.py

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -28,6 +28,10 @@ services:
       # Db dump
       DATABASE_DUMP_BUCKET: database-dump-bucket
 
+      # Presigned URLs
+      CACHE_BUCKET: cache-bucket
+      CDN_URL: https://cdn.test.com
+
       # localstack
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
