fix: incorrect type on output
plus add more logs as the service manifest was not failing but the logs give no indication to why

--- a/service-manifest.json
+++ b/service-manifest.json
@@ -7,6 +7,6 @@
     { "type": "service", "name": "rds" },
     { "type": "service", "name": "navigator-infra" }
   ],
-  "outputs": [{ "type": "service", "name": "rds" }],
+  "outputs": [],
   "repos": ["https://github.com/climatepolicyradar/navigator-admin-backend"]
 }
