--- a/Dockerfile.webapp
+++ b/Dockerfile.webapp
@@ -21,4 +21,5 @@ COPY poetry.lock pyproject.toml ./
 RUN poetry config virtualenvs.create false && poetry install --no-directory --no-root
 
 COPY ./app ./app
+COPY service-manifest.json .
 CMD python app/main.py
